--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,12 @@
       <artifactId>allure-testng</artifactId>
       <version>2.29.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.27.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
